# akh-medu

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  release.toml
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  release.yml
benches/: vsa_ops.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: compartments.md  grammars.md  partitions.md  workspaces.md
book/src/agent/: autonomy.md  ooda-loop.md  planning.md  psyche.md  tools.md
book/src/concepts/: architecture.md  inference.md  reasoning.md  symbols-and-triples.md
book/src/getting-started/: bootstrap.md  installation.md  quickstart.md  seed-packs.md
book/src/integration/: eleutherios.md
book/src/reference/: cli.md  components.md
book/src/server/: overview.md
contrib/systemd/: akhomed.service
data/compartments/personality/: compartment.toml
data/compartments/psyche/: compartment.toml  psyche.toml
data/seeds/common-sense/: seed.toml
data/seeds/identity/: seed.toml
data/seeds/ontology/: seed.toml
docs/: compartments-and-psyche.md  components.md  eleutherios-integration.md  inference.md  seed-packs.md
docs/ai/: architecture.md
docs/ai/decisions/: 001-cyc-paper-analysis.md  002-code-generation-research.md  003-autonomous-tasks-research.md  004-personal-assistant-research.md  005-bootstrapping-research.md  006-identity-bootstrapping-research.md  007-phase9-production-wiring.md  008-channel-abstraction.md  009-grounded-dialogue.md  010-constraint-checking.md  011-social-kg.md  012-oxifed-federation.md  013-transparent-reasoning.md  014-multi-agent-communication.md  015-email-channel.md  016-spam-classification.md  017-email-triage.md  018-email-extraction.md  019-pim-design.md  020-predictive-planning-epistemic-research.md  021-akhipedia-architecture.md  022-nlu-architecture.md  023-client-only-mode.md  024-chat-processor-unification.md  025-vsa-dialogue-system.md  026-macos-service-management.md  027-shared-workspace-agent.md  028-people-contacts-architecture.md  029-mcp-server-integration.md  030-llm-integration-fixes.md
docs/ai/phases/: phase-12-interaction.md  phase-13-personal-assistant.md  phase-14-identity.md  phase-15-causal.md  phase-22-akhipedia.md  phase-25-people-contacts.md  phase-8-agent-autonomy.md
docs/ai/plans/: 2026-02-17-phase10-code-generation.md  2026-02-17-phase11-autonomous-tasks.md  2026-02-17-phase12-interaction.md  2026-02-17-phase13-personal-assistant.md  2026-02-17-phase14-bootstrapping.md  2026-02-17-phase9-cyc-inspired.md  2026-02-21-phase12d-social-kg.md  (+32 more)
docs/initial-research/: AI Model Modularity and CPU Execution.txt  Architectural Foundations of Neuro-Symbolic Artificial Intelligence_ Massively Scalable Symbol Tables and Local Inference via Vector Symbolic Architectures.txt
docs/notes/: 2026-02-08-decisions.md
docs/testing/: manual-autonomy-test.md
scripts/: build_font.py  smoke-test.sh  stability-monitor.sh
skills/architect/: rules.txt  skill.json  triples.json
skills/astronomy/: rules.txt  skill.json  triples.json
skills/common_sense/: rules.txt  skill.json  triples.json
skills/discourse/: rules.txt  skill.json  triples.json
skills/geography/: rules.txt  skill.json  triples.json
skills/language/: rules.txt  skill.json  triples.json
skills/science/: rules.txt  skill.json  triples.json
skills/self-awareness/: rules.txt  skill.json  triples.json
src/: api_types.rs  audit.rs  chat.rs  client.rs  config.rs  engine.rs  error.rs  export.rs  lib.rs  main.rs  message.rs  partition.rs  paths.rs  provenance.rs  registry.rs  rule_macro.rs  service.rs  setup.rs  skolem.rs  symbol.rs  temporal.rs  tms.rs  workspace.rs
src/agent/: agent.rs  calendar.rs  causal.rs  channel.rs  channel_message.rs  chat.rs  chunking.rs  cli_tool.rs  constraint_check.rs  contact.rs  contact_calendar.rs  contact_memory.rs  contact_rel.rs  contact_style.rs  continuous_learning.rs  conversation.rs  curiosity.rs  daemon.rs  decomposition.rs  dialogue.rs  drives.rs  error.rs  explain.rs  goal.rs  goal_generation.rs  idle.rs  interlocutor.rs  library_learn.rs  memory.rs  metacognition.rs  mod.rs  multi_agent.rs  nlp.rs  ooda.rs  operator_channel.rs  oxifed.rs  pim.rs  plan.rs  preference.rs  priority_reasoning.rs  (+13 more)
src/argumentation/: mod.rs
src/autonomous/: error.rs  fusion.rs  gap.rs  integration.rs  mod.rs  rule_engine.rs  rules.rs  schema.rs
src/bootstrap/: competence.rs  expand.rs  identity.rs  ingest.rs  mod.rs  orchestrator.rs  prerequisite.rs  purpose.rs  resources.rs
src/compartment/: cwa.rs  error.rs  manager.rs  manifest.rs  microtheory.rs  mod.rs  psyche.rs
src/dispatch/: mod.rs
src/email/: classify.rs  compose.rs  connector.rs  error.rs  extract.rs  mod.rs  parser.rs  threading.rs  triage.rs
src/glyph/: catalog.rs  mod.rs  notation.rs  render.rs  sigil.rs
src/grammar/: abs.rs  bridge.rs  cat.rs  concrete.rs  custom.rs  detect.rs  discourse.rs  entity_resolution.rs  equivalences.rs  error.rs  formal.rs  lexer.rs  mod.rs  morpho.rs  narrative.rs  parser.rs  preprocess.rs  rust_gen.rs  templates.rs  terse.rs
src/graph/: analytics.rs  argumentation_truth.rs  arity.rs  contradiction.rs  defeasible.rs  index.rs  mod.rs  nart.rs  predicate_hierarchy.rs  sparql.rs  traverse.rs
src/infer/: backward.rs  engine.rs  mod.rs  superposition.rs
src/mcp/: mod.rs
src/nlu/: abstree.gbnf  error.rs  llm_translator.rs  micro_ml.rs  mod.rs  parse_ranker.rs
src/pipeline/: mod.rs
src/reason/: anti_unify.rs  mod.rs  second_order.rs
src/seeds/: mod.rs
src/simd/: avx2.rs  generic.rs  mod.rs
src/skills/: manager.rs  mod.rs
src/store/: durable.rs  mem.rs  mmap.rs  mod.rs
src/tui/: mod.rs  remote.rs  sink.rs  widgets.rs
src/vsa/: code_encode.rs  encode.rs  grounding.rs  item_memory.rs  mod.rs  ops.rs
tests/: integration.rs  persistence.rs
wit/: akh-tool.wit
(+26 files in other folders)
