[package]
name = "akh-medu"
version = "0.4.1"
edition = "2024"
description = "Neuro-symbolic AI engine: VSA + knowledge graphs + symbolic reasoning"
license = "GPL-3.0-only"
repository = "https://github.com/Toasterson/akh-medu"
homepage = "https://akh-medu.dev"
readme = "README.md"
keywords = ["ai", "knowledge-graph", "vsa", "reasoning", "neuro-symbolic"]
categories = ["science", "algorithms", "command-line-utilities"]

[dependencies]
# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Note: We implement our own VSA operations with SIMD kernels
# rather than depending on `hypervector` and `bitvector_simd` which
# have compatibility issues with stable Rust toolchains.

# Symbolic reasoning
egg = "0.11"

# Storage
memmap2 = "0.9"
redb = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"

# Concurrency
dashmap = "6"
rayon = "1"

# Search & Graphs
hnsw_rs = "0.3"
anndists = "0.1"
petgraph = "0.7"
oxigraph = "0.4"

# Code analysis
syn = { version = "2", features = ["full", "visit"] }
quote = "1"

# Document parsing
scraper = "0.23"
pdf-extract = "0.10"
epub = "2"

# HTTP (sync)
ureq = { version = "2", features = ["json"] }

# Process management (Unix PID checks)
libc = "0.2"

# Unicode
unicode-normalization = "0.1"

# Numeric
rand = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Infrastructure
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

# Server (feature-gated)
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# WebSocket client for TUI remote mode (feature-gated)
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }

# WASM tool runtime (feature-gated)
wasmtime = { version = "29", features = ["component-model"], optional = true }

# Federation via oxifed (feature-gated)
lapin = { version = "2", optional = true }
deadpool-lapin = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Email channel (feature-gated)
mail-parser = { version = "0.11", optional = true }
imap = { version = "2", optional = true }
native-tls = { version = "0.2", optional = true }
lettre = { version = "0.11", optional = true, default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }

[features]
daemon = ["tokio", "tokio-tungstenite", "futures-util"]
server = ["daemon", "axum", "tower-http"]
oxifed = ["daemon", "lapin", "deadpool-lapin", "reqwest"]
email = ["mail-parser", "imap", "native-tls", "lettre"]
wasm-tools = ["wasmtime"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bin]]
name = "akh"
path = "src/main.rs"

[[bin]]
name = "akhomed"
path = "src/bin/akhomed.rs"
required-features = ["server"]

[[bench]]
name = "vsa_ops"
harness = false
